fix: wrong color in player progress bar

--- a/user.css
+++ b/user.css
@@ -1310,6 +1310,7 @@ option {
 }
 
 .playback-bar,
+.progress-bar,
 .progress-bar__fg_wrapper,
 .lRNLjBiX_H7SPYbkJKLp,
 .lIrtJi5Y_8ENU19VSvJO {
